# discord-webhook

./: .gitignore  Cargo.toml  LICENSE  README.md  example.json
src/: lib.rs
