[package]
name = "discord-webhook"
version = "0.1.0-alpha"
authors = ["soulflyman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = { version = "1.0", feature = "serde_derive" }