[package]
name = "discord-webhook"
version = "0.1.2-alpha"
authors = ["soulflyman (Stefan Marx) <git@it-marx.de>"]
license = "MIT"
description = "A library that helps to use discord webhooks."
repository = "https://github.com/soulflyman/discord-webhook"
#documentation = "https://"
keywords = ["discord", "webhook", "bot"]
categories = ["network-programming"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = "1.0"
serde_derive = { version = "1.0", feature = "serde_derive" }